--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "kickstart": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,11 @@
   "homepage": "https://github.com/dineshannadurai/play-ground#readme",
   "dependencies": {
     "paper": "^0.12.11"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^4.5.1",
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
