--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "paper": "^0.12.11"
   },
   "devDependencies": {
+    "eslint": "^7.21.0",
     "html-webpack-plugin": "^4.5.1",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
