--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Lint
 
-on: push
+on: pull_request
 
 jobs:
   run-linters:
@@ -21,9 +21,13 @@ jobs:
         run: npm ci
 
       - name: Run linters
-        uses: wearerequired/lint-action@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          npm run lint
+
+      #- name: Run linters
+      #  uses: wearerequired/lint-action@v1
+      #  with:
+      #    github_token: ${{ secrets.GITHUB_TOKEN }}
           # Enable linters
-          eslint: true
+      #    eslint: true
           # prettier: true
