--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "kickstart": "webpack serve"
+    "kickstart": "webpack serve",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
