--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -18,7 +18,8 @@ jobs:
 
       - name: Get All Changed Files
         uses: jitterbit/get-changed-files@v1
-        run: |
+        
+      -run: |
             for changed_file in ${{ steps.files.outputs.all }}; do
               echo "Do something with this ${changed_file}."
             done
