--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -3,7 +3,7 @@ name: Lint
 on: push
 
 jobs:
-  run-linters:
+  echo-changed-files:
     name: Echo changed files
     runs-on: ubuntu-latest
 
@@ -11,15 +11,11 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
+      # - name: Set up Node.js
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: 12
 
-      - name: Get All Changed Files
-        uses: jitterbit/get-changed-files@v1
-        
-      -run: |
-            for changed_file in ${{ steps.files.outputs.all }}; do
-              echo "Do something with this ${changed_file}."
-            done
+      - name: Repository Name
+        run: |
+          echo ${{ github.repository }}
