--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -1,6 +1,6 @@
 name: Lint
 
-on: push
+on: pull_request
 
 jobs:
   echo-changed-files:
@@ -18,4 +18,5 @@ jobs:
 
       - name: Repository Name
         run: |
-          echo ${{ github.repository }}
+          echo Base branch ${{ github.base_ref }}
+          echo Source branch ${{ github.head_ref }}
