--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -26,11 +26,11 @@ jobs:
         run: |
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
           FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename')
-          SCRIPTFILES = $FILES | grep  -E "(.js$|.ts$|.tsx$)"
-          if [[ -z ${SCRIPTFILES} ]]; then
+          # SCRIPT_FILES = $FILES | grep -E "(.js$|.ts$|.tsx$)"
+          if echo $FILES | grep -E "(.js$|.ts$|.tsx$); then
             echo $FILES
             echo "::set-output name=files_changed::true"
-            echo "::set-output name=file_names::${SCRIPTFILES}"
+            echo "::set-output name=file_names::$FILES | grep -E "(.js$|.ts$|.tsx$)"
           else
             echo "no script file changed!!"
             echo "::set-output name=files_changed::false"
