--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -27,10 +27,10 @@ jobs:
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
           FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename')
           # SCRIPT_FILES = $FILES | grep -E "(.js$|.ts$|.tsx$)"
-          if echo $FILES | grep -E "(.js$|.ts$|.tsx$); then
+          if echo $FILES | grep -E "(.js$|.ts$|.tsx$)"; then
             echo $FILES
             echo "::set-output name=files_changed::true"
-            echo "::set-output name=file_names::$FILES | grep -E "(.js$|.ts$|.tsx$)"
+            echo "::set-output name=file_names::$FILES | grep -E '(.js$|.ts$|.tsx$)'"
           else
             echo "no script file changed!!"
             echo "::set-output name=files_changed::false"
