--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -27,9 +27,10 @@ jobs:
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
           FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename')
           echo $FILES
-          if echo $FILES | grep -q ".js"; then
+          SCRIPT_FILES = $FILES | grep -q ".js"
+          if [[ -z ${SCRIPT_FILES} ]]; then
             echo "::set-output name=files_changed::true"
-            echo "::set-output name=file_names::$FILES | grep -E '(.js$|.ts$|.tsx$)'"
+            echo "::set-output name=file_names::${SCRIPT_FILES}"
           else
             echo "no script file changed!!"
             echo "::set-output name=files_changed::false"
