--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -25,12 +25,11 @@ jobs:
         id: changed_files
         run: |
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
-          FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename')
+          FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename' | grep  -E '(.js$|.ts$|.tsx$)'))
           echo $FILES
-          SCRIPT_FILES=$FILES | grep -q ".js"
-          if [[ -z ${SCRIPT_FILES} ]]; then
+          if [[ -z ${FILES} ]]; then
             echo "::set-output name=files_changed::true"
-            echo "::set-output name=file_names::${SCRIPT_FILES}"
+            echo "::set-output name=file_names::${FILES}"
           else
             echo "no script file changed!!"
             echo "::set-output name=files_changed::false"
