testing github actions

--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -25,7 +25,7 @@ jobs:
         id: changed_files
         run: |
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
-          FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename' | grep  -E '(.js$|.ts$|.tsx$)'))
+          FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename' | grep -E '(.js$|.ts$|.tsx$)')
           echo $FILES
           if [[ -z ${FILES} ]]; then
             echo "::set-output name=files_changed::true"
