--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -32,7 +32,7 @@ jobs:
             echo "::set-output name=files_changed::false"
           else
             echo "::set-output name=files_changed::true"
-            echo "::set-output name=file_names::${FILES}"
+            echo "::set-output name=file_names::${FILES[1]}"
           fi
 
       # - name: Find changed files.
