checking empty condition

--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -28,8 +28,11 @@ jobs:
         id: changed_files
         run: |
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
-          FILES=($(curl -s -X GET -G $URL | jq -r '.[] | .filename' | grep -E '(.js$|.ts$|.tsx$)'))
+          FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename' | grep -E '(.js$|.ts$|.tsx$)')
           echo $FILES
+          if [[ -z ${FILES} ]]; then
+            FILES=(FILES)
+          fi
           if [ ${#FILES[@]} -eq 0 ]; then
             echo "no script file changed!!"
             echo "::set-output name=files_changed::false"
@@ -42,4 +45,3 @@ jobs:
         if: steps.changed_files.outputs.files_changed == 'true'
         run: |
           npm run lint ${{steps.changed_files.outputs.file_names}}
-          for i in ${{steps.changed_files.outputs.file_names}}
