--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "kickstart": "webpack serve",
-    "lint": "eslint",
-    "sample1": "bash shell.sh"
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
