Updating the conditions

--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -29,12 +29,12 @@ jobs:
         run: |
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
           FILES=($(curl -s -X GET -G $URL | jq -r '.[] | .filename'))
-          echo "initial array ${FILES}"
+          echo "initial array ${FILES[*]}"
           for index in "${!FILES[@]}" ;
-            do [[ ${FILES[$index]} = !(*.js$|*.jsx$|*.ts$|*.tsx$) ]] && unset -v 'FILES[$index]' ;
+            do [[ ${FILES[$index]} = !(*.js|*.jsx|*.ts|*.tsx) ]] && unset -v 'FILES[$index]' ;
           done
           FILES=("${FILES[@]}")
-          echo "updated array ${FILES}"
+          echo "updated array ${FILES[*]}"
           if [ ${#FILES[@]} -eq 0 ]; then
             echo "no script file changed!!"
             echo "::set-output name=files_changed::false"
