removing js file

--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -30,6 +30,8 @@ jobs:
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
           FILES=($(curl -s -X GET -G $URL | jq -r '.[] | .filename'))
           echo "initial array ${FILES[*]}"
+          CHANGED_FILES=$(git diff --name-only --diff-filter=ACMRTUXB origin/${{ github.base_ref }} origin/${{ github.head_ref }} | grep  -E '(.js$|.ts$|.tsx$)')
+          echo "git cmd ${CHANGED_FILES}"
           for index in "${!FILES[@]}" ;
             do [[ ${FILES[$index]} = !(*.js|*.jsx|*.ts|*.tsx) ]] && unset -v 'FILES[$index]' ;
           done
