--- a/.github/workflows/changedFiles.yml
+++ b/.github/workflows/changedFiles.yml
@@ -10,9 +10,6 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v1
@@ -33,13 +30,8 @@ jobs:
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
           FILES=($(curl -s -X GET -G $URL | jq -r '.[] | .filename'))
           echo "initial array ${FILES[*]}"
-          git status
-          echo "next command"
-          git branch -r
-          CHANGED_FILES=$(git diff --name-only --diff-filter=ACMRTUXB origin/${{ github.base_ref }} origin/${{ github.head_ref }} | grep  -E '(.js$|.ts$|.tsx$)')
-          echo "git cmd ${CHANGED_FILES}"
           for index in "${!FILES[@]}" ;
-            do [[ ${FILES[$index]} = !(*.js|*.jsx|*.ts|*.tsx) ]] && unset -v 'FILES[$index]' ;
+            do [[ ${FILES[$index]} = !(*.js|*.jsx|*.ts|*.tsx) || ! -e ${CHANGED_FILES[$index]} ]] && unset -v 'FILES[$index]' ;
           done
           FILES=("${FILES[@]}")
           echo "updated array ${FILES[*]}"
