--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,9 @@
     "rules": {
         "semi": ["error", "always"],
         "quotes": ["error", "double"]
+    },
+    "parserOptions": {
+        "ecmaVersion": 11,
+        "sourceType": "module"
     }
 }
