--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://dineshannadurai.github.io/play-ground/",
   "devDependencies": {
+    "css-loader": "^5.2.4",
     "eslint": "^7.21.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.1",
