--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "eslint": "^7.21.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "paper": "^0.12.15"
   }
 }
