--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.21.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.1",
+    "path": "^0.12.7",
     "style-loader": "^2.0.0",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
