--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "play-ground",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
@@ -31,8 +31,5 @@
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "paper": "^0.12.15"
   }
 }
