--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "paper": "^0.12.15"
   }
 }
