--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,12 @@
         "es6": true
     },
 
-    "extends": ["eslint:recommended"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:jsx-a11y/recommended",
+        "plugin:security/recommended",
+        "plugin:sonarjs/recommended"
+    ],
     "globals": {
         "paper": "readonly",
         "Path": "readonly",
