--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "paper": "^0.12.15"
+    "paper": "^0.12.15",
+    "wicg-inert": "^3.1.1"
   }
 }
