--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "homepage": "https://dineshannadurai.github.io/play-ground/",
   "devDependencies": {
+    "autoprefixer": "^10.3.0",
     "css-loader": "^5.2.4",
     "eslint": "^7.21.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.1",
     "path": "^0.12.7",
+    "postcss": "^8.3.5",
+    "postcss-loader": "^6.1.1",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.2.4",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
